# DroidDesk-fork

./: README.md  fetch_deps.sh
.github/workflows/: Android.yml  android  android.yml
app/: pubspec.yaml
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/cpp/: CMakeLists.txt  compositor_jni.cpp
app/android/app/src/main/java/com/termux/x11/: CmdEntryPoint.java  LorieView.java  MainActivity.java  Prefs.java
app/android/app/src/main/java/com/termux/x11/input/: TouchInputHandler.java
app/android/app/src/main/kotlin/com/droiddesk/droiddesk/: MainActivity.kt
app/android/app/src/main/kotlin/com/droiddesk/droiddesk/compositor/: CompositorService.kt
app/android/app/src/main/kotlin/com/droiddesk/droiddesk/runtime/: LinuxRuntime.kt  RootfsManager.kt
app/android/app/src/main/kotlin/com/droiddesk/droiddesk/view/: AndroidSurfaceView.kt  AndroidSurfaceViewFactory.kt  DesktopActivity.kt
app/android/app/src/main/kotlin/com/orailnoor/droiddesk/: MainActivity.kt
app/android/app/src/main/kotlin/com/orailnoor/droiddesk/runtime/: ChrootRuntime.kt  LinuxRuntime.kt  RootfsManager.kt
app/android/app/src/main/kotlin/com/orailnoor/droiddesk/view/: DesktopActivity.kt
app/android/app/src/main/kotlin/com/orailnoor/droiddesk/x11/: X11InputController.kt
app/assets/: socket_hook.c
app/lib/screens/: desktop_screen.dart  home_screen.dart  vnc_desktop_screen.dart
app/lib/screens/apps/: app_catalog_screen.dart
app/lib/services/: platform_bridge.dart
app/lib/state/: app_state.dart
